bk_ida/gccida/c2/force_nonfallthru_and_redirect
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1425:4: error: expected ';' after expression
rtx v48; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1425:5: error: use of undeclared identifier 'v48'
rtx v48; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1527:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)v22[1].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1649:1: error: use of undeclared identifier 'v48'
v48 = target->head; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1653:1: error: use of undeclared identifier 'v48'
v48 = emit_label_before( v49, target->head); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1654:16: error: use of undeclared identifier 'v48'
target->head = v48; 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1658:7: error: use of undeclared identifier 'v48'; did you mean 'v49'?
v51 = v48->fld[0].rtint; 
      ^~~
      v49
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1426:18: note: 'v49' declared here
 struct rtx_def *v49; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1665:1: error: use of undeclared identifier 'v48'
v48 = target->head; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1668:17: error: use of undeclared identifier 'v48'
v52 = gen_jump( v48); 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1670:28: error: use of undeclared identifier 'v48'
*( _QWORD *)&src->end[4] = v48; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1671:16: error: use of undeclared identifier 'v48'
++*( _DWORD *)&v48[2]; 
               ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_nonfallthru_and_redirect/src/obj/cfgrtl.o] Error 1
